*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/concepts/cbuildcp.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cbuildcp.htm
@@ -12,7 +12,11 @@
   <body>
     <h1>Build classpath</h1>
 
-    <p>The build classpath is the path which is searched during compilation of a Java project. This path is referred to as "Java Build Path" in the JDT UI.</p>
+    <p>The build classpath is the path which is used to find classes that are
+    referenced by your source code.&nbsp; During compilation, this path is used
+    to search for classes outside of your project.&nbsp; The build classpath is
+    specified for each project.&nbsp; In the project properties, it is referred
+    to as the &quot;Java Build Path.&quot;</p>
 
     <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
      <a href="concepts-4.htm">Java builder</a> <a href="cclsspthv.htm"><br>
