--- a/bundles/org.eclipse.jdt.doc.user/concepts/clocdbug.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/clocdbug.htm
@@ -12,8 +12,30 @@
   <body>
     <h1>Local debugging</h1>
 
-    <p>When a Java program is launched in debug mode (e.g., by clicking the <span class="control">Debug</span> button), execution of the program can be controlled by the
-    debugger.</p>
+    <p>The Java debugger has a client/server design so that it can be used to
+    debug programs that run locally (on the same workstation as the debugger) or
+    remotely (on another computer on the network).</p>
+
+    <p>Local debugging is the simplest and most common kind of debugging.&nbsp;
+    After you have finished editing and building your Java program, you can
+    launch the program on your workstation using the <strong>Run &gt; Debug...</strong> menu item
+    on the workbench.&nbsp; Launching the program in this way will establish a
+    connection between the debugger client and the java program that you are
+    launching.&nbsp; You may then use breakpoints, stepping, or expression
+    evaluation to debug your program.</p>
+
+    <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+    <a href="cbrkpnts.htm">Breakpoints</a></p>
+    <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+    <a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
+    <a href="../tasks/tasks-135.htm">Resuming the execution of suspended threads</a><br>
+    <a href="../tasks/tasks-126.htm">Running and debugging</a><br>
+    <a href="../tasks/tasks-134.htm">Suspending threads</a></p>
+    <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
+    <a href="../reference/ref-11.htm">Debug preferences</a><br>
+    <a href="../reference/ref-51.htm">Debug view</a><br>
+    <a href="../reference/ref-4.htm">Run and debug actions</a><br>
+    </p>
 
     <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
   </body>
