--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-10.htm
@@ -14,11 +14,14 @@
 
     <p>The JDT includes a debugger that enables you to detect and diagnose errors in your programs running either locally or remotely.</p>
 
-    <p>The debugger allows you to control the execution of your program by setting breakpoints, suspending launches, stepping through your code, and examining the contents of
+    <p>The debugger allows you to control the execution of your program by setting breakpoints, suspending
+    launched programs, stepping through your code, and examining the contents of
     variables.</p>
 
     <p>The debugger has a client/server design so you can debug programs running remotely on other systems in the network as well as programs running locally on your workstation.
-    The debugger server runs on the same system as the program you want to debug, which can be on your workstation (local debugging) or a system that is accessible through a
+    The debug client runs inside the workbench on your workstation.&nbsp; The debugger server runs on the same system as the program you want to
+    debug.&nbsp; This could be a program launched on your workstation (local debugging) or a
+    program started on a computer that is accessible through a
     network (remote debugging).</p>
 
     <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
