--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-4.htm
@@ -12,7 +12,9 @@
   <body>
     <h1>Java builder</h1>
 
-    <p>The Java builder uses a compiler that implements the Java Language Specification.</p>
+    <p>The Java builder builds Java programs using a compiler that implements the Java Language Specification.&nbsp;
+    The Java builder can build programs incrementally as individual Java files
+    are saved.&nbsp;&nbsp;</p>
 
     <p>Problems detected by the compiler are classified as either warnings or errors. The existence of a warning does not affect the execution of the program; the code executes as
     if it were written correctly. Compile-time errors (as specified by the Java Language Specification) are always reported as errors by the Java compiler. For some other types of
@@ -20,7 +22,8 @@
     "control">Window &gt; Preferences &gt; Java &gt; Compiler</span> preference page.</p>
 
     <p>The Java compiler can create CLASS files even in presence of compilation errors. However, in the case of serious errors (for example, references to inconsistent binaries,
-    most likely related to an invalid build path), the Java builder does not produce any CLASS file.</p>
+    most likely related to an invalid build path), the Java builder does not produce any CLASS
+    files.</p>
 
     <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
      <a href="cbuildcp.htm">Build classpath</a><br>
