--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
@@ -15,7 +15,7 @@
 
     <h2>Java</h2>
 
-    <p>A perspective tuned for working with Java projects. It consists of an editor area and the following views:</p>
+    <p>A perspective designed for working with Java projects. It consists of an editor area and the following views:</p>
 
     <ul>
       <li><span>Package Explorer</span></li>
@@ -33,7 +33,7 @@
 
     <h2>Java Browsing</h2>
 
-    <p>A perspective tuned for working with Java projects. It consists of an editor area and the following views:</p>
+    <p>A perspective designed for browsing the structure of Java projects. It consists of an editor area and the following views:</p>
 
     <ul>
       <li><span>Projects</span></li>
@@ -47,12 +47,12 @@
 
     <h2>Java Type Hierarchy</h2>
 
-    <p>This perspective allows you to explore a type hierarchy. It can be opened on types, compilation units, packages, projects or source folders and consists of the Hierarchy
+    <p>A perspective designed for exploring a type hierarchy.&nbsp; It can be opened on types, compilation units, packages, projects or source folders and consists of the Hierarchy
     view and an editor.</p>
 
     <h2>Debug</h2>
 
-    <p>This perspective is tuned for debugging your Java program. It includes an editor area and the following views.</p>
+    <p>A perspective designed for debugging your Java program. It includes an editor area and the following views.</p>
 
     <ul>
       <li><span>Debug</span></li>
