--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
@@ -22,18 +22,8 @@
 
     <h2>Hierarchy view</h2>
 
-    <p>The Hierarchy view offers three different ways to look at a type hierarchy:</p>
-
-    <ul>
-      <li><span class="control"><span>Show the Type Hierarchy</span></span> <span>displays the type hierarchy of a type.</span></li>
-
-      <li><span class="control"><span>Show the Supertype Hierarchy</span></span> <span>displays the supertype hierarchy of a type.</span></li>
-
-      <li><span><span class="control">Show the Subtype Hierarchy</span> displays the supertype hierarchy of a type.</span></li>
-    </ul>
-    <hr>
-
-    <h2><span class="control">The following views are most commonly used in the Java Browsing perspective.</span></h2>
+    <p>The Hierarchy view allows you to look at the complete hierarchy for a
+    type, only its subtypes, or only its supertypes.</p>
 
     <h2>Projects view</h2>
 
@@ -58,13 +48,11 @@
     <p>The Members shows the content of a type, compilation unit or CLASS file. Typically, the Types view is used to make this selection.</p>
 
     <p><img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
-     <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
      <a href="../concepts/concepts-5.htm">Java perspectives</a></p>
 
     <p><img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
      <a href="../tasks/tasks-10.htm">Changing the appearance of the console view</a><br>
-     <a href="../tasks/tasks-38.htm">Changing the appearance of the Hierarchy view</a><br>
-     <a href="../tasks/tasks-130.htm">Launching a Java program</a></p>
+     <a href="../tasks/tasks-38.htm">Changing the appearance of the Hierarchy view</a></p>
 
     <p><img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference"><br>
      <a href="../reference/ref-35.htm">Breakpoints view</a><br>
