--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
@@ -11,7 +11,7 @@
   <body>
     <h1>Java editor</h1>
 
-    <p>The JDT provides an editor that gives you specific support for editing Java code.</p>
+    <p>The Java tools provide an editor that provides specialized features editing Java code.</p>
 
     <p>The editor is associated with the Java-specific Outline view, which shows the structure of the active Java compilation unit. It is updated as the user edits the compilation
     unit.</p>
@@ -35,26 +35,11 @@
     <p><span>The Java editor can be configured to either show an entire compilation unit or a single Java element only. To change the setting, use the toolbar button <span class=
     "control">Show Source of Selected Element Only</span>.</span></p>
 
-    <p>By default, this editor is activated by either:</p>
-
-    <ul>
-      <li><span>selecting <span class="control">Open With</span> &gt; <span class="control">Java Editor</span> from a selection's pop-up menu in the Navigator view, Package
-      Explorer view or Types view</span></li>
-
-      <li>clicking a Java file in the Navigator or Package Explorer (see the <span class="control">Window &gt; Preferences &gt; Workbench</span> preference page to choose between
-      single and double click modes)</li>
-
-      <li>clicking a Java type, method or field in the Package Explorer view, Types view, Members view or Type Hierarchy view (see the <span class="control">Window &gt;
-      Preferences &gt; Workbench</span> preference page to choose between single and double click modes)</li>
-
-      <li><span>single-clicking a currently-open Java file in the Navigator view or Package Explorer view.</span></li>
-
-      <li>single-clicking a Java type, method or field, with its compilation unit currently open, in the Package Explorer view, Types view, Members view or Type Hierarchy
-      view</li>
-
-      <li><span>selecting <span class="control">Open</span> from the pop-up menu of either a type or a method in the Type Hierarchy view, Members view, Types view or Package
-      Explorer view.</span></li>
-    </ul>
+    <p>The most common way to invoke the Java editor is to open a Java file from
+    the Navigator or Package explorer using pop-up menus or by clicking the file
+    (single or double-click depending on the user preferences).&nbsp; You can
+    also open the editor by opening Java elements, such as types, methods, or
+    fields, from other views.</p>
 
     <p><img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
      <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
