--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-9.htm
@@ -11,25 +11,29 @@
   <body>
     <h1>Refactoring support</h1>
 
-    <p>The goal of refactoring (behavior-preserving program transformation) is to make a system-wide code change without affecting the behavior of the system. The JDT provides
-    assistance for managing refactorings.</p>
+    <p>The goal of Java program refactoring is to make a system-wide code changes without affecting the behavior of the
+    program. The Java tools provide assistance in easily refactoring
+    code.&nbsp;&nbsp;</p>
 
-    <p>The JDT supports a number of transformations (e.g. <span class="name">Extract Method</span>, <span class="name">Inline Local Variable</span>) described in Martin Fowler's
-    book <span class="name">Refactoring: Improving the Design of Existing Code</span>, Addison Wesley 1999.</p>
+    <p>The refactoring tools support a number of transformations described in Martin Fowler's
+    book <span class="name">Refactoring: Improving the Design of Existing Code</span>, Addison Wesley
+    1999, such as <span class="name">Extract Method</span>, <span class="name">Inline Local
+    Variable, etc.</span></p>
 
-    <p>When performing a refactoring operation, you can optionally preview all the impending changes resulting from a refactoring action before you choose to carry them out. Thus,
-    you can execute a refactoring in one of two ways:</p>
+    <p>When performing a refactoring operation, you can optionally preview all
+    of the changes resulting from a refactoring action before you choose to carry them out.
+    When previewing a refactoring operation, you will be notified of potential
+    problems and will be presented with a specific list of the changes the
+    refactoring action will perform.&nbsp; If you do not preview a refactoring
+    operation, the change will be made in its entirety and any resultant
+    problems will be shown.&nbsp; If a problem is detected that does not allow
+    the refactoring to continue, the operation will be halted and a list of
+    problems will be displayed.</p>
 
-    <ul>
-      <li><span>Refactoring with preview<br>
-       In a controlled refactoring, you are notified of potential problems and are given a detailed preview of what the refactoring action will do.</span></li>
-
-      <li><span>Refactoring without preview<br>
-       In a quick refactoring, the potential problem notification and preview are omitted. If a Stop problem is detected, the refactoring will be halted and a list of problems
-      will be displayed.</span></li>
-    </ul>
-
-    <p>Refactoring commands are available from the context menus of several Java views (e.g. Package Explorer, Outline) and editors.</p>
+    <p>Refactoring commands are available from the context menus of several Java views (e.g. Package Explorer, Outline) and editors.&nbsp;
+    Many &quot;apparently simple&quot; commands, such as <strong>Move</strong> and <strong>Rename</strong>, are
+    actually refactoring operations, since moving and renaming Java elements
+    often require changes in dependent files.</p>
 
     <p><img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
      <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
