--- a/bundles/org.eclipse.jdt.doc.user/concepts/cremdbug.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cremdbug.htm
@@ -12,12 +12,42 @@
   <body>
     <h1>Remote debugging</h1>
 
-    <p>It is possible to connect to and debug a Java program that has been launched in debug mode configured to accept connections on a remote or local host. Debugging a remote
-    program is similar to debugging a regular Java program, except that the program has already been launched and could be on a remote host. <a href="clocdbug.htm">See Debugging
-    Locally</a></p>
+    <p>The client/server design of the Java debugger allows you to launch a Java
+    program from computer on your network and debug it from the workstation
+    running the platform.&nbsp; This is particularly useful when you are
+    developing a program for a device that cannot host the development
+    platform.&nbsp; It is also useful when debugging programs on dedicated
+    machines such as web servers.&nbsp; </p>
 
-    <p class="Note">Note: Launching a Java program in debug mode is VM-specific.</p>
+    <p>Note:&nbsp; To use remote debugging, you must be using a Java VM that
+    supports this feature.</p>
 
+    <p>To debug a program remotely, you must be able to launch the program in
+    debug mode on the remote machine so that it will wait for a connection from
+    your debugger.&nbsp; The specific technique for launching the program and
+    connecting the debugger are VM-specific.&nbsp; The basic steps are as
+    follows:</p>
+
+    <ol>
+      <li>Ensure that you are building your Java program with available debug
+        information.&nbsp; (You can control these attributes from <strong>Window
+        &gt; Preferences &gt; Java &gt; Compiler</strong>).&nbsp; </li>
+      <li>After you build your Java program, install it to the target
+        computer.&nbsp; This involves copying the .CLASS files or .JAR files to
+        the appropriate location on the remote computer.</li>
+      <li>Invoke the Java program on the remote computer using the appropriate
+        VM arguments to specify debug mode and a communication port for the
+        debugger.</li>
+      <li>Start the debugger using a remote launch configuration and specify the
+        address and port of the remote computer.</li>
+    </ol>
+    <p>More specific instructions for setting up a launch configuration for
+    remote debugging should be obtained from your VM provider.&nbsp; </p>
+    <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+    <a href="../tasks/tasks-141.htm">Connecting to a remote VM<br>
+    </a>
+    <a href="../tasks/tasks-142.htm">Disconnecting from a VM</a><br>
+    </p>
     <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
   </body>
 </html>
