--- a/bundles/org.eclipse.jdt.doc.user/concepts/cbrkpnts.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cbrkpnts.htm
@@ -12,22 +12,34 @@
   <body>
     <h1>Breakpoints</h1>
 
-    <p>A breakpoint causes the execution of a thread to suspend at the location where the breakpoint is set.</p>
+    <p>A breakpoint causes the execution of a program thread to suspend at the location where the breakpoint is set.</p>
 
     <p>Breakpoints can be enabled and disabled via their context menus in the Breakpoints view.</p>
 
     <ul>
-      <li>When a breakpoint is enabled, it will cause a thread to suspend whenever it is hit. Enabled breakpoints are indicated with a blue circle. Enabled breakpoints that are
-      successfully installed in a class in a VM at runtime are indicated with a checkmark overlay.</li>
+      <li>When a breakpoint is enabled, it will cause a thread to suspend whenever
+        the breakpoint is reached. Enabled breakpoints are indicated with a blue circle. Enabled breakpoints
+        are shown with a checkmark overlay after their class is loaded by the VM
+        and the breakpoint successfully installed.</li>
 
       <li>When a breakpoint is disabled, it will not cause threads to suspend. Disabled breakpoints are indicated with a white circle.</li>
     </ul>
 
     <p>Debugging breakpoints are displayed in the marker bar in the editor area and in the Breakpoints view.</p>
 
-    <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-     <a href="../reference/ref-4.htm">Run menu</a><br>
-     <a href="../reference/ref-35.htm">Breakpoints view</a><br>
+    <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+     <a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
+     <a href="../tasks/tasks-135.htm">Resuming the execution of suspended threads</a><br>
+     <a href="../tasks/tasks-126.htm">Running and debugging</a><br>
+     <a href="../tasks/tasks-134.htm">Suspending threads</a></p>
+
+    <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
+     <a href="../reference/ref-11.htm">Debug preferences</a><br>
+     <a href="../reference/ref-51.htm">Debug view</a><a href="../reference/ref-4.htm"><br>
+    Run menu</a><br>
+     <a href="../reference/ref-4.htm">Run and debug actions</a><br>
+     <a href="../reference/ref-debugappearance.htm">Debug Appearance<br>
+    </a><a href="../reference/ref-35.htm">Breakpoints view</a><br>
     </p>
 
     <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
