--- a/bundles/org.eclipse.jdt.doc.user/concepts/cclsspthv.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cclsspthv.htm
@@ -12,8 +12,17 @@
   <body>
     <h1>Classpath variables</h1>
 
-    <p>In addition to projects and JARs the build path of a Java project can also contain variables. These variables are called class path variables and can point to a JAR
-    file.</p>
+    <p>The build path for a Java project can include source code files, other
+    Java projects, and JAR files.&nbsp; JAR files can be specified using file
+    system paths, or by using variables that refer to locations on the
+    network.&nbsp;&nbsp;</p>
+
+    <p>Classpath variables allow you avoid references to the location of a JAR
+    file on your local file system.&nbsp; By using a classpath variable, you can
+    specify a JAR file or library using only a variable name, such as JRE_LIB,
+    rather than specifying the location of the JRE on your workstation.&nbsp; In
+    this way, you can share build paths across teams and define the variables to
+    refer to the correct location for your particular computer.</p>
 
     <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
      <a href="concepts-1.htm">Java development tools (JDT)</a><br>
