--- a/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
@@ -11,35 +11,43 @@
   <body>
     <h1>String externalization</h1>
 
-    <p>For an explanation what string externalization and internationalization are please see:</p>
-
-    <ul>
-      <li><a href=
-      "http://www-106.ibm.com/developerworks/opensource/library/os-i18n/?loc=dwmain">http://www-106.ibm.com/developerworks/opensource/library/os-i18n/?loc=dwmain</a></li>
-
-      <li><a href="http://java.sun.com/docs/books/tutorial/i18n/intro/index.html">http://java.sun.com/docs/books/tutorial/i18n/intro/index.html</a></li>
-    </ul>
-
-    <p>The JDT uses comments put in code to mark strings as externalized.</p>
-
-    <p>These comments are of form <code>//$NON-NLS-n$</code> where n is the 1-based index of the string in a line of code.</p>
+    <p>The Java tools help you to develop applications that can be run on
+    international platforms.&nbsp; An important facet of designing a program for
+    use in different countries is the localization, or externalization, of text
+    that is displayed by the program.&nbsp; By externalizing strings, the text
+    can be translated for different countries and languages without rebuilding
+    the Java program.</p>
 
     <p>The JDT provides the following support for internationalization and string externalization:</p>
 
     <ul>
       <li>
-        Compiler option that lets you mark not-externalized strings as compile-time warnings or errors. 
+        A compiler option lets you mark not-externalized strings as compile-time warnings or errors. 
 
         <ul>
           <li>See the <span class="control">Window &gt; Preferences &gt; Java &gt; Compiler &gt; Errors and Warnings &gt; Not-externalized strings</span> preference</li>
         </ul>
       </li>
 
-      <li>Support to find compilation units that contain not-externalized strings.</li>
+      <li>Tools allow you to find compilation units that contain strings that
+        have not been externalized.</li>
 
-      <li>A wizard that lets you externalize strings.</li>
+      <li>A wizard is provided to guide you through externalizing the strings.</li>
 
-      <li>Support for finding unused and incorrectly used keys for strings externalized to property files.</li>
+      <li>Tools help you to find unused and incorrectly used keys for strings
+        located in property files.</li>
+    </ul>
+
+    <p>Comments can be used to denote strings that should not be externalized
+    and should not result in compile-time warnings or errors.&nbsp; These comments are of form <code>//$NON-NLS-n$</code> where n is the 1-based index of the string in a line of code.</p>
+    <p>Additional information about internationalized applications can be found
+    in the following documents:</p>
+
+    <ul>
+      <li><a href=
+      "http://www-106.ibm.com/developerworks/opensource/library/os-i18n/?loc=dwmain">http://www-106.ibm.com/developerworks/opensource/library/os-i18n/?loc=dwmain</a></li>
+
+      <li><a href="http://java.sun.com/docs/books/tutorial/i18n/intro/index.html">http://java.sun.com/docs/books/tutorial/i18n/intro/index.html</a></li>
     </ul>
 
     <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
