--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-1.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-1.htm
@@ -11,7 +11,8 @@
   <body>
     <h1>Java development tools (JDT)</h1>
 
-    <p>The Java development tools (JDT) are a set of extensions to the workbench that enable Java development.</p>
+    <p>The Java development tools (JDT) are a set of extensions to the workbench that
+    allow you to edit, compile, and run Java programs.</p>
 
     <p><img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
      <a href="cbuildcp.htm">Build classpath</a><br>
