--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
@@ -11,17 +11,20 @@
   <body>
     <h1>Java projects</h1>
 
-    <p>A Java project has an associated Java builder that can incrementally compile Java source files as they are changed.</p>
+    <p>A Java project contains source code and related files for building a Java
+    program.&nbsp; It has an associated Java builder that can incrementally compile Java source files as they are changed.</p>
 
-    <p>A Java project also maintains information about the type hierarchy, references and declarations of Java elements. This information is constantly updated as the user changes
-    the Java source code. It is independent of the builder.</p>
+    <p>A Java project also maintains a model of its contents.&nbsp; This model
+    includes information about the type hierarchy, references and declarations of Java elements. This information is constantly updated as the user changes
+    the Java source code. The updating of the internal Java project model is independent of the
+    Java builder.</p>
 
     <p>You can organize Java projects in two different ways:</p>
 
     <ul>
       <li><span>Using the project as the source container. This is the recommended organization for simple projects.</span></li>
 
-      <li><span>Using source folders as the source container. This is the recommended organization for more complex projects. It allows you to subdivide packages into
+      <li><span>Using source folders inside the project as the source container. This is the recommended organization for more complex projects. It allows you to subdivide packages into
       groups.</span></li>
     </ul>
 
