--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
@@ -13,9 +13,9 @@
 
     <p><span>The Java searching support allows you to find declarations and references of Java elements (packages, types, methods, fields). Searching is supported by an index that
     is kept up to date in the background as the resources corresponding to Java elements are changed. The Java search operates on workspaces independent of their build state. For
-    examples, searches can be conducted when auto-build is turned off.</span></p>
+    example, searches can be conducted when auto-build is turned off.</span></p>
 
-    <p>The following searches can be conducted from the pop-up menus of Java elements:</p>
+    <p>The following searches can be initiated from the pop-up menus of Java elements:</p>
 
     <table border="1" cellspacing="0" cellpadding="0" summary="Java search actions">
       <thead>
