--- a/bundles/org.eclipse.jdt.doc.user/concepts/ctemplates.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/ctemplates.htm
@@ -11,12 +11,23 @@
   <body>
     <h1>Templates</h1>
 
-    <p>Templates are often reoccurring source code patterns.</p>
+    <p>Templates are a structured description of coding patterns that reoccur in
+    source code.&nbsp; The Java editor supports the use of templates to fill in
+    commonly used source patterns.&nbsp; Templates are inserted using content
+    assist (<strong>Ctrl+Space</strong>).</p>
 
-    <p>The JDT offers support for creating, managing and using templates.</p>
+    <p>For example, a common coding pattern is to iterate over the elements of
+    an array using a for loop that indexes into the array.&nbsp; By using a
+    template for this pattern, you can avoid typing in the complete code for the
+    loop.&nbsp; Invoking content assist after typing the word <code>for</code> will present
+    you with a list of possible templates for a for loop.  You can choose the appropriate
+    template by name (<code>iterate over array</code>).&nbsp;&nbsp; Selecting this template will
+    insert the code into the editor and position your cursor so that you can
+    edit the details.</p>
 
-    <p><img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
-     <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
+    <p>Many common templates are already defined.&nbsp; These can be browsed in <strong>Window
+    &gt;Preferences &gt;Java &gt;Editor &gt;Templates</strong>.&nbsp; You can
+    also create your own templates or edit the existing ones.</p>
 
     <p><img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
      <a href="../tasks/tasks-171.htm">Using templates</a><br>
