--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-184.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-184.htm
@@ -16,7 +16,7 @@
     <ol>
       <li>Select the <span class="control">Filters</span> command from the Package Explorer's drop-down menu.</li>
 
-      <li>Clear the <span class="control">Hide empty parent packages</span> checkbox.</li>
+      <li>Clear the <span class="control">Empty parent packages</span> checkbox.</li>
     </ol>
 
     <p>To hide empty parent packages:</p>
@@ -24,7 +24,7 @@
     <ol>
       <li>Select the <span class="control">Filters</span> command from the Package Explorer's drop-down menu.</li>
 
-      <li>Select the <span class="control">Hide empty parent packages</span> checkbox.</li>
+      <li>Select the <span class="control">Empty parent packages</span> checkbox.</li>
     </ol>
 
     <p class="Note">Note: As an example, the parent packages created for package org.eclipse.ui, would be:</p>
