--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-191.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-191.htm
@@ -11,7 +11,8 @@
   <body>
     <h1>Showing and hiding members in Java views</h1>
 
-    <p>Several Java views (e.g. Outline, Package Explorer, Members) offer filtering of members (fields, types and methods). The filters are available as toolbar buttons. There are
+    <p>Several Java views (e.g. Outline, Package Explorer, Members) offer filtering of members (fields, types and methods). The filters are available as toolbar
+    buttons or as view menu items, depending on the view. There are
     3 member filters:</p>
 
     <ul>
@@ -26,12 +27,16 @@
     <p>To show members in Package Explorer:</p>
 
     <ul>
-      <li>Select the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show members in Package Explorer</span> checkbox</li>
+      <li>Select the <span class="control"> Show members in Package Explorer</span> checkbox
+        in the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance
+        </span>page.</li>
     </ul>
     To hide members in Package Explorer: 
 
     <ul>
-      <li>Clear the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show members in Package Explorer</span> checkbox</li>
+      <li>Clear the <span class="control"> Show members in Package Explorer</span> checkbox
+        in the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance
+        </span> page</li>
     </ul>
 
     <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
