--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-192.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-192.htm
@@ -16,12 +16,16 @@
     <p>To show the override indicators:</p>
 
     <ul>
-      <li>Select the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show override indicators in outline and hierarchy</span> checkbox</li>
+      <li>Select the <span class="control"> Show override indicators in outline and hierarchy</span> checkbox
+        in the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance
+        </span>page&nbsp;</li>
     </ul>
     To hide the override indicators: 
 
     <ul>
-      <li>Clear the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show override indicators in outline and hierarchy</span> checkbox</li>
+      <li>Clear the <span class="control"> Show override indicators in outline and hierarchy</span> checkbox
+        in the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance
+        </span> page&nbsp;</li>
     </ul>
 
     <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
