--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-193.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-193.htm
@@ -16,13 +16,16 @@
     <p>To show method return types in Java views:</p>
 
     <ul>
-      <li>Select the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show method return types</span> checkbox</li>
+      <li>Open&nbsp; the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance</span>
+        page and select the <span class="control">Show method return types</span> checkbox</li>
     </ul>
 
     <p>To hide method return types in Java views:</p>
 
     <ul>
-      <li>Clear the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show method return types</span> checkbox</li>
+      <li>Clear the <span class="control"> Show method return types</span> checkbox
+        in the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance
+        </span> page</li>
     </ul>
 
     <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
