--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-214.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-214.htm
@@ -9,14 +9,14 @@
   </head>
 
   <body>
-    <h1>Showing and hiding non-Java elements</h1>
+    <h1>Showing and hiding package declarations</h1>
 
     <p>To show non-Java elements:</p>
 
     <ol>
       <li>Select the <span class="control">Filters</span> command from the Package Explorer's drop-down menu.</li>
 
-      <li>Clear the <span class="control">Non-Java elements</span> checkbox.</li>
+      <li>Clear the <span class="control">Package declarations</span> checkbox.</li>
     </ol>
 
     <p>To hide non-Java elements:</p>
@@ -24,7 +24,7 @@
     <ol>
       <li>Select the <span class="control">Filters</span> command from the Package Explorer's drop-down menu.</li>
 
-      <li>Select the <span class="control">Non-Java elements</span> checkbox.</li>
+      <li>Select the <span class="control">Package declarations</span> checkbox.</li>
     </ol>
 
     <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
