*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
@@ -16,17 +16,31 @@
     <p>To show full package names:</p>
 
     <ul>
-      <li>Clear the <span class="control">Window &gt; Preference &gt; Java &gt; Appearance &gt; Compress package name segments</span> checkbox<span class="control">.</span></li>
+      <li>Clear the <span class="control"> Compress package name segments</span> checkbox
+        on the <span class="control">Window &gt; Preference &gt; Java &gt; Appearance
+        </span> page&nbsp;</li>
     </ul>
     To show compressed package names: 
 
     <ul>
       <li>
-        <p>Select the <span class="control">Window &gt; Preference &gt; Java &gt; Appearance &gt; Compress package name segments</span> checkbox.</p>
+        <p>Check the <span class="control"> Compress package name segments</span> 
+        checkbox on the <span class="control">Window &gt; Preference &gt; Java &gt; Appearance
+        </span> page&nbsp;</p>
 
-        <p>A compression pattern can contain a digit (n), which represents the first n characters of a package name segment.<br>
-         The compression pattern is not used if the resulting name is longer than the original package name. For example, using a pattern <span class="control">3~.</span> on a
-        package named <span class="control">org.eclipse.jdt</span> results in <span class="control">org.ecl~.jdt</span></p>
+        <p>Compression patterns control how many characters of each package name
+        segment are displayed.&nbsp; The last segment of a package name is
+        always displayed.</p>
+        <p>A compression pattern of &quot;.&quot; indicates that only the
+        separating periods are shown to represent a segment.&nbsp; A digit (n)
+        in a compression pattern represents the first n characters of a package name segment.&nbsp;
+        Examples are the best way to understand compression patterns.&nbsp; The
+        package <span class="control">org.eclipse.jdt </span>would be displayed
+        as follows using the example compression patterns:</p>
+        <p> <span class="control">.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>..jdt</p>
+        <p><span class="control">0&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>jdt</p>
+        <p><span class="control">2~&nbsp;&nbsp;&nbsp;&nbsp; </span>or~.ec~.jdt</p>
+        <p> <span class="control">3~&nbsp;&nbsp;&nbsp;&nbsp; </span>org.ecl~.jdt</p>
       </li>
     </ul>
 
