--- a/bundles/org.eclipse.test/testframework.html
+++ b/bundles/org.eclipse.test/testframework.html
@@ -5,11 +5,9 @@
 
 <body>
 <h1>The Eclipse Test Framework</h1>
-<p>Last Modified: September 25, 2002</p>
-<p>*** This document needs to be updated to reflect changes in JUnit and the Test 
-  Framework. If you would like to volunteer please send email to <a href="mailto:eclipse-dev@eclipse.org">eclipse-dev@eclipse.org</a> 
-  ***</p>
-<p><font size="+1">Introduction</font></p>
+<p>Last Modified: Feb. 26, 2003</p>
+<p><font size="+1"><br>
+  Introduction</font></p>
 <p>The testing framework is comprised of the org.eclipse.test plugin and the org.eclipse.ant.optional.junit 
   fragment. </p>
 <p>These two projects are available from the dev.eclipse.org repository and are 
@@ -37,9 +35,9 @@
 <p><font size="+1">Setup</font></p>
 <p>Follow the steps given above to build and install all of the neccessary plugins 
   and fragments. Please note that the current version of the test framework is 
-  not compatible with the PDE notion of self-hosting(?). If you want to run the 
-  tests, you will need to setup a full target Eclipse so that the testing framework 
-  can detect everything that is needed.</p>
+  not compatible with the PDE notion of self-hosting. If you want to run the tests, 
+  you will need to setup a full target Eclipse so that the testing framework can 
+  detect everything that is needed.</p>
 
 <p>If you are writing tests for one or more Eclipse plugins, then you should
 create a separate plugin for tests. The test plugin will contain all of the
@@ -431,7 +429,7 @@ must be a real file, not a symbolic link. If the test framework is throwing an e
 <code>java.io.IOException: java: not found</code>, ensure that the java executable is on
 your system path.</p>
 
-<h4>Problem 6: PDE(?)</h4>
+<h4>Problem 6: PDE</h4>
 <p>The testing framework currently has no knowledge of PDE. In order to run the automated
 you must be running a self hosting environment with a full development and target Eclipse.</p>
 
