*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-10.htm
@@ -13,65 +13,26 @@
       Changing the appearance of the Console view
     </h1>
     <p>
-      To set the color and font for output to the Console view:
+      To set the types of output (and their colors) in the Console view:
     </p>
     <ol>
       <li>
-        From the menu bar, select <strong>Window</strong> &gt; <strong>Preferences</strong>.
+        From the menu bar, select <strong>Window</strong> &gt; <strong>Preferences
+        &gt; Debug &gt; Console</strong> to view the Console Preferences page.
       </li>
       <li>
-        Expand the <strong>Debug</strong> category and select <strong>Console</strong>. The Console Preferences page opens.
-      </li>
-      <li>
-        Selecting the <strong><strong>Show when program writes to standard out</strong></strong> option causes the Console view in the current perspective to become visible each
+        Checking the <strong><strong>Show when program writes to standard out</strong></strong> 
+        checkbox will make the Console view visible each
         time new output is written to the console from the program&#39;s standard output stream. If there is no Console view in the current perspective, one will be created.
       </li>
       <li>
-        Selecting the <strong><strong>Show when program writes to standard err</strong></strong> option causes the Console view in the current perspective to become visible each
+        Checking the <strong><strong>Show when program writes to standard err</strong></strong> 
+        checkbox will make the Console view visible each
         time new output is written to the console from the program&#39;s standard error stream. If there is no Console view in the current perspective, one will be created.
       </li>
       <li>
-        Click any of the color buttons to change the color for the corresponding text. The default colors are described in the table below.<br>
-         &nbsp; 
-        <table border="1" cellspacing="0">
-          <tr>
-            <th rowspan="1" colspan="1">
-              Option
-            </th>
-            <th rowspan="1" colspan="1">
-              Default
-            </th>
-          </tr>
-          <tr>
-            <td rowspan="1" colspan="1" valign="top" align="left">
-              Standard Out
-            </td>
-            <td rowspan="1" colspan="1" valign="top" align="left">
-              Blue
-            </td>
-          </tr>
-          <tr>
-            <td rowspan="1" colspan="1" valign="top" align="left">
-              Standard Error
-            </td>
-            <td rowspan="1" colspan="1" valign="top" align="left">
-              Red
-            </td>
-          </tr>
-          <tr>
-            <td rowspan="1" colspan="1" valign="top" align="left">
-              Standard In
-            </td>
-            <td rowspan="1" colspan="1" valign="top" align="left">
-              Green
-            </td>
-          </tr>
-        </table>
-      </li>
-      <li>
-        <p>
-          Click the <strong><strong>Change</strong></strong> button to modify the text font for the console.
-        </p>
+        Click any of the color buttons to change the color for the corresponding
+        text stream.&nbsp;&nbsp;
       </li>
     </ol>
     <p>
