*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-9.htm
@@ -10,31 +10,40 @@
   </head>
   <body>
     <h1>
-      Changing debugger launch options
+      Changing the active perspective when launching
     </h1>
+    You can control which perspective becomes active when a program is launched
+    in debug or run mode.
+    <p>To activate a particular perspective when a program is launched in debug
+    mode, do the following:</p>
     <ol>
+      <li>Open the debugger preferences page (<strong>Window</strong>  &gt; <strong>Preferences</strong> 
+        &gt; <strong>Debug</strong>).</li>
+      <li>Select a perspective from the <strong>Default perspective for Debug</strong> 
+        combo box.&nbsp; This will cause the perspective you choose to become
+        active whenever a program is launched in debug mode.</li>
+      <li>To override your default choice for a particular launch configuration,
+        you can select a perspective from the <strong>Perspective to switch
+        to or open when launched in: Debug mode</strong> option in the <strong>Common</strong> tab in the launch configuration dialog.</li>
+    </ol>
+    <p>To activate a particular perspective when a program is launched in run
+    mode, do the following:</p>
+    <ol>
+      <li>Open the debugger preferences page (<strong>Window</strong>  &gt; <strong>Preferences</strong> 
+        &gt; <strong>Debug</strong>).</li>
       <li>
-        Select <strong>Window</strong> &gt; <strong>Preferences</strong> &gt; <strong>Debug</strong>.
+        Setting a perspective from the <strong>Default perspective for Run</strong>
+        combo box.&nbsp; This will cause the perspective you choose to become
+        active whenever a program is launched in run mode.
       </li>
       <li>
-        Setting the <strong>Default perspective for Debug</strong> option sets the selected perspective as the default perspective to become active automatically
-        each time a launch configuration is launched in debug mode. This default can be overridden in a launch configuration by setting the <strong>Perspective to switch
-        to or open when launched in: Debug mode</strong> option found on the <strong>Common</strong> tab in the launch configuration dialog.<br>
-        <br>
-         If the selected perspective is not open at the time, a perspective is created. If a perspective is created, it will adhere to the workbench preference for new
-        perspectives (<strong>Window</strong> &gt; <strong>Preferences</strong> &gt; <strong>Workbench</strong> &gt; <strong>Perspectives</strong>) and will either open in the
-        same window or in a new window.
-      </li>
-      <li>
-        Setting the <strong><strong>Default perspective for Run</strong></strong> option sets the selected perspective as the default perspective to become active automatically
-        each time a launch configuration is launched in run mode. This default can be overridden in a launch configuration by setting the <strong><strong>Perspective to switch to
-        or open when launched in: Run mode</strong></strong> option found on the <strong>Common</strong> tab in the launch configuration dialog.<br>
-        <br>
-         If the selected perspective is not open at the time, a perspective is created. If a perspective is created, it will adhere to the workbench preference for new
-        perspectives (<strong>Window</strong> &gt; <strong>Preferences</strong> &gt; <strong>Workbench</strong> &gt; <strong>Perspectives</strong>) and will either open in the
-        same window or in a new window.
+        To override your default choice for a particular launch configuration,
+        you can select a perspective from the <strong>Perspective to switch to
+        or open when launched in: Run mode</strong> option in the <strong>Common</strong> tab in the launch configuration dialog.
       </li>
     </ol>
+    <p>If the selected perspective is not open at the time the program is
+    launched in run or debug mode, that perspective is created.&nbsp;</p>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
     </p>
@@ -46,11 +55,10 @@
     </p>
     <p>
       <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
-      <a href="../tasks/tasks-133.htm">Preparing to debug</a><br>
-       <a href="../tasks/tasks-126.htm">Running and debugging</a>
-    </p>
+      <br>
+       <a href="../tasks/tasks-126.htm">Running and debugging</a><br>
+       <a href="../tasks/tasks-129.htm">Setting execution arguments</a><br>
+       <a href="../tasks/tasks-130.htm">Launching a Java program</a><br>    </p>
     <p>
       <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
     </p>
